<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * (C) Copyright 2014 mjahnen <github@mgns.tech>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<resources>
    <string name="app_name">Usbfileman</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete">Delete</string>
    <string name="create_file">Create file</string>
    <string name="create_dir">Create directory</string>
    <string name="create_big_file">Create big file</string>
    <string name="rename">Rename</string>
    <string name="paste">Paste</string>
    <string name="move">Move</string>
    <string name="name">Name:</string>
    <string name="content">Content:</string>
    <string name="directory">Directory</string>
    <string name="file">File</string>
    <string name="start_http_server">Serve via HTTP Server</string>
    <string name="stop_http_server">Stop HTTP Server</string>
    <string name="run_tests">Run tests</string>
    <string name="run_storage_provider">Run StorageProvider</string>
    <string name="copy_to_usb">Copy to USB</string>
    <string name="request_write_storage_perm">Please let this app access your storage to copy files from USB</string>
    <string name="permission_granted">Permission granted. Please try again now.</string>
    <string name="permission_denied">Permission denied. Cannot copy from USB.</string>
    <string name="copy_folder_to_usb">Copy folder to USB</string>
    <string name="drawer_open">Show Devices</string>
    <string name="drawer_close">Close</string>
</resources>
