<!--
/**
 * (C) Copyright 2014 mjahnen <jahnen@in.tum.de>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/create_file"
        app:showAsAction="never"
        android:title="@string/create_file"/>
    <item
        android:id="@+id/create_dir"
        android:title="@string/create_dir">
    </item>
    <item
        android:id="@+id/create_big_file"
        android:title="@string/create_big_file">
    </item>
    <item
        android:id="@+id/paste"
        android:title="@string/paste">
    </item>

    <item
        android:id="@+id/stop_http_server"
        android:title="@string/stop_http_server">
    </item>

    <item
        android:id="@+id/run_tests"
        android:title="@string/run_tests">
    </item>

    <item
        android:id="@+id/open_storage_provider"
        android:title="@string/run_storage_provider"/>

    <item
        android:id="@+id/copy_from_storage_provider"
        android:title="@string/copy_to_usb"/>


    <item
        android:id="@+id/copy_folder_from_storage_provider"
        android:title="@string/copy_folder_to_usb"/>

</menu>